feat: implement booking system with Stripe payment integration and user management
Payment System:
- Create DTOs for payment requests and responses: ConfirmPaymentRequest, CreatePaymentIntentRequest, PaymentIntentDto, PaymentIntentResponse
- Develop PaymentMapper to handle mapping between PaymentIntent and PaymentIntentResponse
- Implement IStripeService interface and StripeService for Stripe API interactions

Booking System:
- Implement BookingMapper to map booking requests and responses
- Develop BookingService to handle event, venue, and service bookings with payment processing
- Add methods for booking cancellation and retrieval of booking details
- Introduce BookerType enum for user roles in bookings

User Management:
- Add repositories for Admin, Attendee, ServiceProvider, and Service
- Implement UserSyncService for user role management and synchronization

Notifications:
- Implement BookingNotificationService for sending email notifications related to bookings